# domainslib

./: .ci-multicore-ocaml.sh  .ci.sh  .gitignore  .travis-multicore-ocaml.sh  .travis.sh  .travis.yml  Batcher Data.csv  CHANGES.md  CODE_OF_CONDUCT.md  Makefile  README.md  domainslib.opam  dune-project  multicoretests.opam  qcheck-lin.opam  qcheck-multicoretests-util.opam  qcheck-stm.opam  visualize.ipynb
.github/workflows/: main.yml
benchmarks/: bench.ml  btree.ml  counter.ml  dune  skiplist.ml  timing.ml  util.ml
data/: README.md  btree.ml  counter.ml  dune  finite_vector.ml  finite_vector.mli  skiplist.ml
data/test/: btree_01_basic.t  btree_02_build.t  btree_03_basic_search.t  btree_07_splitting.t  btree_08_splitting_nested.t  btree_09_splitting_nested_smaller_depth.t  btree_tester.ml  dune  finite_vector_01_create.t  finite_vector_02_insert.t  finite_vector_03_singleton.t  finite_vector_04_split_from.t  finite_vector_05_drop_last.t  finite_vector_06_clip.t  finite_vector_tester.ml
doc/: index.html
doc/domainslib/: index.html
doc/domainslib/Domainslib/: index.html
doc/domainslib/Domainslib/Chan/: index.html
doc/domainslib/Domainslib/Task/: index.html
experiments/: Makefile  batch_para_btree.ml  bop_lin.ml  btree.ml  btree_validator.ml  dune  ib_btree.ml  ib_btree_one.ml  ib_btree_par.ml  ib_btree_perf.ml  ib_btree_seq.ml  ib_btree_seq_bad.ml  ib_btree_seq_flipped.ml  ib_btree_two.ml  impbatch_btree.ml  seq_btree.ml  utils.ml
experiments/old/: bop_lin.ml  btree_validator.ml  ib_btree.ml  ib_btree_par.ml  ib_btree_perf.ml  ib_btree_seq_bad.ml  ib_btree_seq_flipped.ml
experiments/test/: Makefile  basic.t  basic_search.t  btree_tester.ml  build.t  build_perf.ml  build_perf.t  build_tests.ml  dune  flatten_test.ml  imp_batch.t  inserting_range.t  inserting_range_search.t  inserting_range_smaller_depth.t  par_insert.t  par_search.t  par_search_deeper.t  perf_utils.ml  rebuild.t  rebuild_perf.ml  rebuild_perf.t  splitting.t  splitting_nested.t  splitting_nested_smaller_depth.t  splitting_search.t
lib/: array_iter.ml  array_iter.mli  backoff.ml  batcher.ml  batcher.mli  batcher_clean.ml  chan.ml  chan.mli  domainslib.ml  dune  fun_queue.ml  fun_queue.mli  intarray.ml  intarray.mli  multi_channel.ml  parray.ml  parray.mli  task.ml  task.mli  task_one.ml  task_pool.ml  task_pool.mli  task_seq.ml  task_seq.mli  ts_container.ml  ts_container.mli  ws_deque.ml
multicoretests/: #README.md#  AUTHORS  CHANGES.md  LICENSE  Makefile  README.md  dune  multicoretests.opam  qcheck-lin.opam  qcheck-multicoretests-util.opam  qcheck-stm.opam
multicoretests/lib/: STM.ml  STM.mli  STM_domain.ml  STM_domain.mli  STM_sequential.ml  STM_sequential.mli  STM_thread.ml  STM_thread.mli  dune  lin.ml  lin.mli  lin_batched.ml  lin_domain.ml  lin_domain.mli  lin_effect.ml  lin_effect.mli  lin_thread.ml  lin_thread.mli  util.ml  util.mli
multicoretests/src/: README.md
multicoretests/src/array/: dune  dune.disabled  lin_tests.ml  lin_tests_dsl.ml  stm_tests.ml
multicoretests/src/btree/: lin_tests.ml
multicoretests/src/counter/: lin_tests.ml
multicoretests/src/skiplist/: dune  lin_tests.ml
multicoretests/test/: cleanup_lin.ml  cleanup_stm.ml  dune  mutable_set_v5.expected.32  mutable_set_v5.expected.64  mutable_set_v5.ml  util_print_test.expected  util_print_test.ml
test/: BENCHMARKS.md  LU_decomposition_multicore.ml  Makefile  backtrace.ml  batched_counter.ml  batched_slist.ml  bench_batched_counter.ml  bench_batched_slist.ml  bench_counters.ml  bench_mpmc_queue.ml  bench_slist.ml  chan_stm_tests.ml  con_slist.ml  counters.ml  dune  enumerate_par.ml  fib.ml  fib_par.ml  game_of_life.ml  game_of_life_multicore.ml  imp_bcounter.ml  imp_bslist.ml  kcas_integration.ml  lazy_slist.ml  mergesort_multicore.ml  mpmc_queue.ml  mpmc_queue.mli  new_bench_slist.ml  off_by_one.ml  par_init.ml  playground.ml  prefix_sum.ml  quicksort_multicore.ml  slist.ml  spectralnorm2.ml  spectralnorm2_multicore.ml  spsc_unbounded_queue.ml  sum_par.ml  summed_area_table.ml  task_exn.ml  (+17 more)
