opam-version: "2.0"
maintainer: "KC Sivaramakrishnan <kc@kcsrk.info>"
authors: ["KC Sivaramakrishnan <kc@kcsrk.info>"]
homepage: "https://github.com/ocaml-multicore/domainslib"
doc: "https://kayceesrk.github.io/domainslib/doc"
synopsis: "Parallel Structures over Domains for Multicore OCaml"
license: "ISC"
dev-repo: "git+https://github.com/ocaml-multicore/domainslib.git"
bug-reports: "https://github.com/ocaml-multicore/domainslib/issues"
tags: []
depends: [
  "base-domains"
  "ocamlfind" {build}
  "dune" {build}
  "mirage-clock-unix" {with-test}
]
depopts: []
build: [
  "dune" "build" "-p" name
]
