opam-version: "2.0"
maintainer: "KC Sivaramakrishnan <kc@kcsrk.info>"
authors: ["KC Sivaramakrishnan <kc@kcsrk.info>"]
homepage: "https://github.com/ocaml-multicore/domainslib"
doc: "https://kayceesrk.github.io/domainslib/doc"
synopsis: "Parallel Structures over Domains for Multicore OCaml"
license: "ISC"
dev-repo: "git+https://github.com/ocaml-multicore/domainslib.git"
bug-reports: "https://github.com/ocaml-multicore/domainslib/issues"
tags: []
depends: [
  "ocaml" {>= "5.00"}
  "dune" {>= "3.0"}
  "lockfree" { >= "0.2.0"}
  "mirage-clock-unix" {with-test}
  "ppx_deriving" {with-test & >= "5.2.1"}
  "qcheck-core" {with-test & >= "0.20"}
  "qcheck-multicoretests-util" {with-test & >= "0.1.0"}
  "qcheck-stm" {with-test & >= "0.1.0"}
]
depopts: []
build: [
  "dune" "build" "-p" name
]
