(library
 (name btree)
 (libraries iter domainslib)
 (modules btree))

(library
 (name batch_para_btree)
 (libraries domainslib btree)
 (modules batch_para_btree))

(executables
 (names seq_btree ib_btree_two bop_lin)
 (libraries btree batch_para_btree domainslib unix qcheck-lin.domain)
 (preprocess
  (pps ppx_deriving.show))
 (modules
  seq_btree
  ib_btree_one
  ib_btree_two
  ib_btree_one_flipped
  utils
  bop_lin))

(library
 (name ib_btree)
 (libraries batch_para_btree domainslib unix)
 (modules ib_btree))
