(library
 (name btree)
 (libraries iter domainslib)
 (modules btree))

(library
 (name batch_para_btree)
 (libraries domainslib btree seq)
 (modules batch_para_btree))

(executables
 (names seq_btree bop_lin)
 (libraries btree batch_para_btree domainslib unix qcheck-lin.domain)
 (preprocess
  (pps ppx_deriving.show))
 (modules
  seq_btree
  ib_btree_one
  ib_btree_one_flipped
  ib_btree_one_bad
  ib_btree_two
  utils
  bop_lin))

(executable
 (name ib_btree)
 (libraries batch_para_btree domainslib unix)
 (modules ib_btree))
