(executable
 (name btree_tester)
 (libraries btree batch_para_btree ib_btree)
 (modules btree_tester))

(executables
 (names build_perf rebuild_perf)
 (libraries batch_para_btree domainslib unix)
 (modules build_perf rebuild_perf perf_utils))

(test
 (name build_tests)
 (libraries batch_para_btree domainslib)
 (modules build_tests))

(cram
 (deps ./btree_tester.exe ./build_perf.exe ./rebuild_perf.exe))
